--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+
+  "DbSettings": {
+    "ConnectionString": "Server=localhost;Database=TodoAPIDb;  Integrated Security=true;  TrustServerCertificate=true;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
